--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "window.title": "${activeEditorShort}${separator}${rootName} ${separator} [Branch: main]${separator}[Branch: main]"
+    "window.title": "${activeEditorShort}${separator}${rootName} ${separator} [Branch: main]${separator}[Branch: main]",
+    "CodeGPT.apiKey": "CodeGPT Plus Beta"
 }
