--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.0.0-alpha.23",
+    "@types/markdown-it": "^14.1.2",
     "astro": "^4.15.4",
     "tailwindcss": "^4.0.0-alpha.23"
+  },
+  "dependencies": {
+    "@astrojs/mdx": "^3.1.9",
+    "markdown-it": "^14.1.0",
+    "zod": "^3.23.8"
   }
 }
