--- a/package.json
+++ b/package.json
@@ -20,9 +20,17 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^3.1.9",
+    "@astrojs/react": "^3.6.2",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vapi-ai/web": "^2.1.7",
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.456.0",
     "markdown-it": "^14.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "vapi-web": "^1.0.5",
     "zod": "^3.23.8"
   }
 }
