--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.0.0-alpha.23",
     "@types/markdown-it": "^14.1.2",
+    "@types/three": "^0.169.0",
     "astro": "^4.15.4",
     "tailwindcss": "^4.0.0-alpha.23"
   },
@@ -25,11 +26,15 @@
     "@types/react-dom": "^18.3.1",
     "@vapi-ai/web": "^2.1.7",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.11.11",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.456.0",
     "markdown-it": "^14.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "simplex-noise": "^4.0.3",
+    "three": "^0.170.0",
     "vapi-web": "^1.0.5",
     "zod": "^3.23.8"
   }
