--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vapi-ai/web": "^2.1.7",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.11",
     "gsap": "^3.12.5",
