--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "astro": "^4.15.4",
     "tailwindcss": "^4.0.0-alpha.23"
   },
+    "type": "module",
   "dependencies": {
     "@astrojs/mdx": "^3.1.9",
     "@astrojs/react": "^3.6.2",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vapi-ai/web": "^2.1.7",
