--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "astro": "^4.15.4",
     "tailwindcss": "^4.0.0-alpha.23"
   },
-    "type": "module",
+  "type": "module",
   "dependencies": {
     "@astrojs/mdx": "^3.1.9",
     "@astrojs/react": "^3.6.2",
@@ -28,6 +28,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vapi-ai/web": "^2.1.7",
+    "astro-navbar": "^2.3.7",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.11",
