--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "astro": "astro"
   },
   "devDependencies": {
-    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/sitemap": "^3.1.6",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.0.0-alpha.23",
     "@types/markdown-it": "^14.1.2",
     "@types/three": "^0.169.0",
-    "astro": "^5.0.4",
+    "astro": "^4.15.4",
     "tailwindcss": "^4.0.0-alpha.23"
   },
   "type": "module",
   "dependencies": {
-    "@astrojs/mdx": "^4.0.2",
-    "@astrojs/react": "^4.0.0",
+    "@apostrophecms/apostrophe-astro": "^1.1.0",
+    "@astrojs/mdx": "^3.1.9",
+    "@astrojs/react": "^3.6.2",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@types/react": "^18.3.12",
