--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vapi-ai/web": "^2.1.7",
     "astro-navbar": "^2.3.7",
     "axios": "^1.7.7",
+    "country-flag-icons": "^1.5.13",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.11",
     "gsap": "^3.12.5",
