--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "country-flag-icons": "^1.5.13",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.11",
+    "gabber-client-core": "^0.15.0",
+    "gabber-client-react": "^0.17.0",
     "gsap": "^3.12.5",
     "lucide-react": "^0.456.0",
     "markdown-it": "^14.1.0",
